# chat

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .lighthouserc.js  .lighthouserc.json  .npmrc  .prettierignore  .releaserc.js  .vector-search-checklist.md  AUTH-TASKS-86-91-SUMMARY.md  CHANGELOG-v0.5.0.md  CHANGELOG.md  CLEANUP-SUMMARY.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  E2E-IMPLEMENTATION-SUMMARY.md  E2E-QUICK-START.md  EMAIL-SETUP.md  LICENSE  Makefile  OAUTH-SETUP-GUIDE.md  PHASE-10-AUTH-COMPLETE.md  PHASE-6-8-COMPLETION-REPORT.md  PRODUCTION-CHECKLIST.md  PRODUCTION-READY.md  QUICK-START-PRODUCTION.md  QUICK_REFERENCE.md  README.md  RELEASE-CHECKLIST-v0.9.1-rc.1.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SECURITY-HARDENING-COMPLETION.md  SECURITY.md  SENTRY_IMPLEMENTATION.md  SMART-SEARCH-IMPLEMENTATION.md  TASK-139-COMPLETION.txt  TASKS-101-105-COMPLETE.md  TESTING-SUMMARY.md  TRACK.md  (+30 more)
.claude/: CLAUDE.md
.github/: .releaserc.js  CODEOWNERS  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  gitleaks.toml  renovate.json
.wiki/: AI-Infrastructure-Tests-Summary.md  AUTH-SYSTEM-COMPLETE.md  Accessibility-Guide.md  Admin-Advanced-Features.md  Animations.md  Architecture-Overview.md  BRUTAL-REALITY-CHECK.md  CHANGELOG.md  CODE-QUALITY-REPORT-v091.md  Channel-Discovery-Quick-Reference.md  DEPLOYMENT-CHECKLIST.md  Home.md  README.md  (+51 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: autostart.rs  commands.rs  deeplink.rs  lib.rs  main.rs  menu.rs  notifications.rs  tray.rs  updater.rs
(+8322 files in other folders)
