[package]
name = "nchat"
version = "0.1.0"
description = "nself-chat desktop application"
authors = ["nself"]
license = "MIT"
repository = "https://github.com/nself/nself-chat"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
    "image-ico",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = { version = "2", features = ["macos", "windows", "linux"] }
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
